<resources>
    <!-- Launch -->
    <string name="launch_desc">PetAdoption © Code: Roger Chang</string>

    <!-- Button text -->
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="save">儲存</string>
    <string name="last">上一步</string>
    <string name="next">下一步</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="finish">完成</string>

    <!-- General -->
    <string name="field_required">＊</string>
    <string name="more">more</string>
    <string name="unknown_error">未知錯誤</string>
    <string name="other">其他</string>
    <string name="male">男生</string>
    <string name="female">女生</string>

    <!-- Main -->
    <string name="bnv_home">配對</string>
    <string name="bnv_favorite">收藏</string>
    <string name="bnv_shelter">收容所</string>
    <string name="bnv_map">地圖</string>
    <string name="bnv_hospital">醫院</string>
    <string name="bnv_profile">個人</string>

    <!-- SignIn -->
    <string name="sign_in_continue_with_facebook">以 Facebook 繼續</string>
    <string name="sign_in_continue_with_google">以 Google 繼續</string>
    <string name="sign_in_welcome">歡迎使用寵物領養</string>
    <string name="sign_in_account">E-mail</string>
    <string name="sign_in_account_hint">請輸入 E-mail</string>
    <string name="sign_in_password">密碼</string>
    <string name="sign_in_password_hint">請輸入密碼</string>
    <string name="sign_in_title">登入</string>
    <string name="sign_in_register">還沒有帳號？立即註冊</string>
    <string name="sign_in_register_btn">註冊</string>
    <string name="sign_in_password_desc">請設定 8 &#8211; 20 位數的英數字混合密碼</string>
    <string name="sign_in_go_sign_in">已經有帳號了？點此登入</string>
    <string name="sign_in_password_invalid_title">密碼格式錯誤</string>
    <string name="sign_in_password_invalid_content">請設定 8 &#8211; 20 位數的英數字混合密碼</string>
    <string name="sign_in_empty_title">帳號密碼不可為空</string>
    <string name="sign_in_empty_content">請設定 8 &#8211; 20 位數的英數字混合密碼</string>
    <string name="sign_up_fail_title">註冊失敗</string>
    <string name="sign_up_fail_content">E-mail 輸入錯誤或重複，請重新註冊</string>
    <string name="sign_in_authentication_failed">Authentication failed</string>
    <string name="sign_in_password_login_failed_title">登入失敗</string>
    <string name="sign_in_password_login_failed_content">帳號或密碼錯誤，請重新登入或註冊</string>
    <string name="sign_in_account_already_exists">An account may already exists with the same email address</string>

    <!-- Home -->
    <string name="home_pet_empty">找無資料，請更改篩選條件</string>
    <string name="home_filter">篩選</string>
    <string name="home_shelter_info">動物所屬收容所資訊</string>
    <string name="home_shelter_title">名稱</string>
    <string name="home_shelter_address">地址</string>
    <string name="home_shelter_mobile">電話</string>
    <string name="home_pet_common_info">其他資訊</string>
    <string name="home_pet_update_time_title">更新時間</string>
    <string name="home_pet_remark_title">備註</string>
    <string name="home_pet_state_pos">可領養</string>
    <string name="home_pet_state_neg">已被領養</string>
    <string name="home_set_favorite_success">已加入收藏</string>
    <string name="home_set_not_favorite_success">已刪除收藏</string>
    <string name="home_btn_intent_to_web">帶我回家</string>
    <string name="home_intent_to_web_url">https://asms.coa.gov.tw/Amlapp/App/AnnounceList.aspx?Id=%1$s&amp;AcceptNum=%2$s&amp;PageType=Adopt</string>
    <string name="home_intent_to_web_dialog_title">即將前往全國動物收容系統</string>
    <string name="home_intent_to_web_dialog_content">寵物編號 %1$s</string>

    <!-- Filter -->
    <string name="filter_title">篩選</string>
    <string name="filter_btn">篩選</string>
    <string name="filter_type">寵物種類</string>
    <string name="filter_gender">性別</string>
    <string name="filter_body_type">體型</string>
    <string name="filter_color">顏色</string>

    <!-- FilterType -->
    <string name="filter_type_cat">貓貓</string>
    <string name="filter_type_dog">狗狗</string>
    <string name="filter_type_casual">不拘</string>

    <!-- FilterGender -->
    <string name="filter_gender_male">男生</string>
    <string name="filter_gender_female">女生</string>
    <string name="filter_gender_casual">不拘</string>

    <!-- FilterBodyType -->
    <string name="filter_body_type_small">小</string>
    <string name="filter_body_type_medium">中</string>
    <string name="filter_body_type_big">大</string>

    <!-- FilterColor -->
    <string name="filter_color_coffee">咖啡色</string>
    <string name="filter_color_yellow">黃色</string>
    <string name="filter_color_tabby">虎斑色</string>
    <string name="filter_color_black">黑色</string>
    <string name="filter_color_brown">棕色</string>
    <string name="filter_color_white">白色</string>
    <string name="filter_color_tortoiseshell">玳瑁色</string>
    <string name="filter_color_beige">米色</string>
    <string name="filter_color_casual">不拘</string>

    <!-- ShelterMap -->
    <string name="shelter_map_weather">%1$s - %2$s °C</string>

    <!-- Favorite -->
    <string name="favorite_title">收藏名單</string>
    <string name="favorite_pet_empty">目前無收藏</string>
    <string name="favorite_remove_favorite_dialog_title">移除收藏</string>
    <string name="favorite_remove_favorite_dialog_content">請確認是否要移除收藏</string>

    <!-- Hospital -->
    <string name="hospital_search_nearby">搜尋附近地區</string>
    <string name="hospital_map_weather">%1$s - %2$s °C</string>
    <string name="hospital_info_empty_dialog_title">找不到此資料</string>
    <string name="hospital_info_empty_dialog_content">尋找此醫院資料時發生錯誤，請重新嘗試</string>

    <!-- Profile -->
    <string name="profile_info">個人資料</string>
    <string name="profile_version">版本紀錄</string>
    <string name="profile_logout">登出</string>
    <string name="profile_version_number">V%1$s</string>
    <string name="profile_sign_out_dialog_title">登出</string>
    <string name="profile_sign_out_dialog_content">請確認是否要登出</string>

    <!--EditProfile-->
    <string name="editProfile_title">編輯個人資料</string>
    <string name="editProfile_nickname">暱稱</string>
    <string name="editProfile_email">E-mail</string>
    <string name="editProfile_success">成功編輯暱稱</string>
    <string name="editProfile_back_dialog_title">資料尚未儲存</string>
    <string name="editProfile_back_dialog_content">您的個人資料尚未儲存，請確認是否離開</string>

    <!-- Shelter -->
    <string name="shelter_search_nearby">搜尋附近地區</string>
    <string name="shelter_title">收容所</string>
    <string name="shelter_info_empty_dialog_title">找不到此資料</string>
    <string name="shelter_info_empty_dialog_content">尋找此收容所資料時發生錯誤，請重新嘗試</string>

    <!-- ShelterFilter -->
    <string name="shelter_filter_title">篩選</string>
    <string name="shelter_filter_btn">篩選</string>
    <string name="shelter_filter_city">城市</string>
    <string name="shelter_filter_empty">此城市無收容所</string>

    <!-- Location -->
    <string name="route_exception">取得路線時發生錯誤</string>
    <string name="device_location_exception">取得裝置位置時發生錯誤，請打開定位再重新嘗試</string>
    <string name="gps_exception">取得裝置位置時發生錯誤，請打開定位再重新嘗試此功能</string>
    <string name="permission_exception_dialog_title">未取得權限</string>
    <string name="permission_exception_dialog_content">取得權限時發生錯誤，請開啟位置權限後再重新嘗試此功能</string>
</resources>