<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.SignInActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_120"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/sign_in_welcome"
        android:textColor="#242424"
        android:textSize="@dimen/dp_20" />

    <com.roger.petadoption.utils.custom_view.PetAdoptionTextInput
        android:id="@+id/til_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:inputType="textNoSuggestions"
        app:TextInput_hint="@string/sign_in_account_hint"
        app:TextInput_title="@string/sign_in_account"
        app:endIconMode="clear_text" />

    <com.roger.petadoption.utils.custom_view.PetAdoptionTextInput
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:inputType="textNoSuggestions"
        app:TextInput_hint="@string/sign_in_password_hint"
        app:TextInput_title="@string/sign_in_password"
        app:endIconMode="password_toggle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        style="@style/PrimaryButton.Large"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/sign_in_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/sign_in_register"
        android:textAppearance="@style/TextAppearance.P3"
        android:textColor="@color/colorNeutral_N4_placeholder" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_facebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/shape_facebook_btn_bg"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center"
                android:src="@drawable/ic_social_media_facebook" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:text="@string/sign_in_continue_with_facebook"
                android:textAppearance="@style/TextAppearance.H5"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_google"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/shape_google_btn_bg"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center"
                android:src="@drawable/ic_social_media_google" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:text="@string/sign_in_continue_with_google"
                android:textAppearance="@style/TextAppearance.H5"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>