<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/v_filter_topDivider"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/app_bar"
            layout="@layout/layout_collapsing_appbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@color/colorNeutral_N6_background"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/filter_type"
                    android:textAppearance="@style/TextAppearance.H5"
                    android:textColor="@color/colorNeutral_N1_primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_type"
                    app:spanCount="3"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_filter_type" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/filter_gender"
                    android:textAppearance="@style/TextAppearance.H5"
                    android:textColor="@color/colorNeutral_N1_primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_type" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gender"
                    app:spanCount="3"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_filter_gender" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_body_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/filter_body_type"
                    android:textAppearance="@style/TextAppearance.H5"
                    android:textColor="@color/colorNeutral_N1_primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_gender" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_body_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_body_type"
                    app:spanCount="3"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_filter_body_type" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/filter_color"
                    android:textAppearance="@style/TextAppearance.H5"
                    android:textColor="@color/colorNeutral_N1_primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_body_type" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_color"
                    app:spanCount="3"
                    tools:itemCount="9"
                    tools:listitem="@layout/item_filter_color" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <View
        android:id="@+id/v_filter_topDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorBlack_B05_hover"
        app:layout_constraintBottom_toTopOf="@+id/btn_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_filter"
        style="@style/PrimaryButton.Large"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/filter_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>